# SIMDTL

./: .gitattributes  .gitignore  CMakeLists.txt  PLAN.md  README.md  SIDMTL.sln  readme.txt
.github/workflows/: ci.yml
SIMDTL/: SIMD.h  SIMDTL.cpp  SIMDTL.vcxproj  SIMDTL.vcxproj.filters  SIMDTL.vcxproj.filters.txt  add.h  count.h  instructions.h  make_integer_sequence.h  preserve_constness.h  range_comparisons.h  replace.h  reverse.h  scoped_timer.h  simd.h  simd_reverse.h  tests.cpp
benchmarks/: CMakeLists.txt  bench_compaction.cpp  bench_count.cpp
cmake/: simdtl-config.cmake.in
docs/: M0_FINDINGS.md  M1_RESULTS.md  M3_RESULTS.md  REVIEW_FINDINGS.md  SHOWCASE.md  USAGE.md
examples/: CMakeLists.txt  showcase.cpp
include/simdtl/: simdtl.hpp  string_range.hpp
include/simdtl/algorithm/: copy_if.hpp  count.hpp  equal.hpp  find.hpp  minmax.hpp  reduce.hpp  replace.hpp  transform.hpp
include/simdtl/backend/: names.hpp  simd.hpp
include/simdtl/crosslane/: compress.hpp  reverse.hpp
include/simdtl/detail/: driver.hpp
include/simdtl/platform/: arch_macros.hpp  cpu.hpp  dispatch.hpp
scripts/: build-m0.ps1  build-tests.ps1  lint-seam.ps1
src/kernels/: count_avx2.cpp  crosslane_avx2.cpp
tests/: CMakeLists.txt  test_algorithms.cpp  test_compaction.cpp  test_count.cpp  test_string.cpp
tests/support/: differential.hpp  sizes.hpp
tools/: m0_cpu_probe.cpp  m0_smoke.cpp
